--- a/stripx.css
+++ b/stripx.css
@@ -156,7 +156,7 @@
   left: 0;
   width: 100%;
   color: #efefef;
-  font-size: 13px;
+  font-size: 11px;
   line-height: 20px;
   background: #000;
   -webkit-text-size-adjust: none;
@@ -403,7 +403,7 @@
 }
 
 /* X */
-.strp-window-skin-strip .strp-close .strp-close-icon { background-image: url('strip-skins/strip/close.svg'); opacity: .8; }
+.strp-window-skin-strip .strp-close .strp-close-icon { background-image: url('https://gitcdn.link/repo/SopNodo/-Pruebas/master/close.svg'); opacity: .8; }
 .strp-window-skin-strip .strp-close:hover .strp-close-icon { opacity: 1; }
 /* iOS 8.4.1 bug: when opacity changes it'll require 2 taps
    force a single opacity to fix this
