--- a/strip.css
+++ b/strip.css
@@ -403,7 +403,7 @@
 }
 
 /* X */
-.strp-window-skin-strip .strp-close .strp-close-icon { background-image: url('https://i.postimg.cc/2yWb8BH7/close.png'); opacity: .8; }
+.strp-window-skin-strip .strp-close .strp-close-icon { background-image: url('https://gitcdn.link/repo/SopNodo/-Pruebas/master/close.svg'); opacity: .8; }
 .strp-window-skin-strip .strp-close:hover .strp-close-icon { opacity: 1; }
 /* iOS 8.4.1 bug: when opacity changes it'll require 2 taps
    force a single opacity to fix this
@@ -412,7 +412,7 @@
 .strp-window-skin-strip.strp-mobile-touch .strp-close:hover .strp-close-icon { opacity: 1; }
 
 /* IE7-8/no-svg */
-.strp-window-skin-strip.strp-no-svg .strp-close .strp-close-icon { background-image: url('strip-skins/strip/close.png'); opacity: 1; }
+.strp-window-skin-strip.strp-no-svg .strp-close .strp-close-icon { background-image: url('https://i.postimg.cc/2yWb8BH7/close.png'); opacity: 1; }
 
 
 /* here's how to have content slide in with the window when opening and closing  */
